More Fixes
Limited the ballot to five. If the ballot isn't maxed, then it wouldn't submit. Also upped the font on things so that everything doesn't look too small.

--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@
     border-radius: 8px;
     border: none;
 
-    font-size: 14px;
+    font-size: 28px;
     color: black;
 }
 
@@ -73,8 +73,9 @@
     border-radius: 25px;
     border: none;
 
-    font-size: 16px;
-    color: white;
+    font-size: 32px;
+    color: black;
+    
 }
 
 /* Candidate Buttons */
@@ -127,6 +128,6 @@
     border-radius: 18px;
     border: none;
 
-    font-size: 18px;
+    font-size: 26px;
     color: white;
 }
